# ss-analytics

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  benchMarker.cpp  benchMarker.hpp  cl.cpp  cl.hpp  containsASM.asm  example.txt  fileGenerator.py  implimentedFunctions.cpp  kCompute.comp  kCompute.spv  main.cpp  profiler-results.json  standardFunctions.cpp  standardFunctions.hpp  substringSearch.comp  testOutput_1000MB.json  testOutput_100MB.json  testOutput_10MB.json  testOutput_1200MB.json  testOutput_1500MB.json  testOutput_500MB.json  testOutput_50MB.json  testOutput_800MB.json  vSearch.cpp  vkSearch.cpp  vkSearch.hpp  vkSearchShader.glsl
results/: testOutput_1000MB.json  testOutput_100MB.json  testOutput_10MB.json  testOutput_1200MB.json  testOutput_1500MB.json  testOutput_500MB.json  testOutput_50MB.json  testOutput_800MB.json
searchFunctions/: cl.cpp  cl.hpp  implementedFunctions.cpp  implementedFunctions.hpp  implimentedFunctions.cpp  standardFunctions.cpp  standardFunctions.hpp  vkSearch.cpp  vkSearch.hpp
